deployments/aks-alts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-alts-svc 
spec:
  replicas: 1
  revisionHistoryLimit: 0 # Default to 10 if not specified
  selector:
    matchLabels:
      app: aks-alts-svc
  template:
    metadata:
      labels:
        app: aks-alts-svc
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 2000
        fsGroup: 3000
      containers:
        - name: private-alts-container
          image: altsacr.azurecr.io/samples/alts:v3
          resources:
            requests:
              memory: "50Mi"
              cpu: "0.5"
            limits:
              memory: "100Mi"
              cpu: "1"
          ports:
            - containerPort: 8080
      imagePullSecrets:
          - name: acr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: aks-alts-svc  
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: aks-alts-svc
