deployments/alts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alts-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aks-alts-svc
            port:
              number: 8080
